--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,14 +10,6 @@
     <link rel="stylesheet" href="styles/layout.css">
     <link rel="stylesheet" href="styles/modules.css">
     <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
-
-    <!--
-      TODO: Add a script tag to hold the Handlebars template.
-        - Be sure to give it a meaningful id attribute.
-        - Move your old template structure to here. Remember that this template needs to have the same structure as the old one!
-        - Insert placeholder keys.
-        - If your object doesn't have values you need yet, you can add those properties in the model.
-    -->
   </head>
   <body>
     <header class="site-header clearfix">
@@ -53,6 +45,15 @@
             </li>
           </ul>
         </div>
+        
+        <!--
+        TODO: Add a template element for your articles.
+            - Be sure to give it a meaningful id attribute.
+            - Insert placeholder keys for Handlebars to replace.
+            - If your object doesn't have values you need yet, you can add those properties in the model.
+        -->
+
+
       </section>
       <section id="about" class="tab-content">
         <header>
