--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -20,7 +20,8 @@
         <h2>The shocking power of static pages</h2>
       </section>
       <nav class="main-nav">
-        <div class="icon-menu"></div>
+        <span class="icon-menu"></span>
+        <input type="checkbox" />
         <ul>
           <li class="tab" data-content="articles"><a href="#" class="icon-home"> Home</a></li>
           <li class="tab" data-content="about"><a href="#" class="icon-address-book"> About</a></li>
