--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -52,7 +52,7 @@
             - If your object doesn't have values you need yet, you can add those properties in the model.
         -->
         <template id="article-template">
-          <article data-js-category="category">
+          <article data-js-category="{{category}}">
             <header>
               <h1>{{title}}</h1>
               <div class="byline">
