--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -54,7 +54,7 @@
             - If your object doesn't have values you need yet, you can add those properties in the model.
         -->
         <template id="article-template">
-          <article data-js-category="category" data-js-author="author">
+          <article data-js-category="category" data-js-author="author" class="clearfix">
             <header>
               <h1>{{title}}</h1>
               <div class="byline">
