--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -46,7 +46,7 @@
           </ul>
         </div>
         <!--
-        TODO: Add a template element for your articles.
+        TODONE: Add a template element for your articles.
             - Be sure to give it a meaningful id attribute.
             - Insert placeholder keys for Handlebars to replace.
             - If your object doesn't have values you need yet, you can add those properties in the model.
@@ -91,6 +91,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- TODO: Include Handlebars.JS from a CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.amd.js"></script>
 
     <script src="scripts/blogArticles.js"></script>
     <script src="scripts/article.js"></script>
