--- a/index.html
+++ b/index.html
@@ -33,6 +33,30 @@
     </header>
     <main>
       <section id="articles" class="tab-content">
+        <!-- <div>
+          <ul id="filters">
+            <li>
+
+              <template id="author-filter-template">
+                <select id="author-filter">
+                  <option value="">-- Filter by Authors --</option>
+                  {{{options}}}
+                </select>
+              </template>
+
+            </li>
+            <li>
+
+              <template id="category-filter-template">              
+                <select id="category-filter">
+                  <option value="">-- Filter by Categories --</option>
+                  {{{options}}}                  
+                </select>
+              </template>
+
+            </li>
+          </ul>
+        </div> -->
         <div>
           <ul id="filters">
             <li>
