--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -52,7 +52,7 @@
             - Insert placeholder keys for Handlebars to replace.
             - If your object doesn't have values you need yet, you can add those properties in the model.
         -->
-        <script id="article-template" type="text/x-handlebars-template" >
+        <!-- <script id="article-template" type="text/x-handlebars-template" >
           <article data-js-category="category">
             <header>
               <h1>{{Title}}</h1>
@@ -65,7 +65,7 @@
             <section class="article-body"></section>
             <a href="#" cass="read-on">Read on &rarr;</a>
           </article>           
-        </script>
+        </script> -->
       </section>
       <section id="about" class="tab-content">
         <header>
@@ -87,10 +87,9 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- TODOne: Include Handlebars.JS from a CDN -->
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.js"></script>
     <script src="scripts/blogArticles.js"></script>
     <script src="scripts/article.js"></script>
     <script src="scripts/articleView.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.amd.min.js"
   </body>
 </html>
