--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -63,6 +63,7 @@
               </div>
             </header>
             <section class="article-body">{{{body}}}</section>
+            <a href="#" class="read-on">Read on &rarr;</a>
           </article>
         </template>
 
