Refactored all functions to arrow format

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -53,7 +53,7 @@
         -->
 
         <template id="article-template">
-          <article data-js-category="{{category}}">
+          <article data-js-category="{{category}}" data-js-author="{{author}}">
             <header>
               <h1>{{title}}</h1>
               <div class="byline">
