--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -59,7 +59,7 @@
           </article>
         </template>
         <!--
-        TODONE?: Add a template element for your articles.
+        TODONE: Add a template element for your articles.
             - Be sure to give it a meaningful id attribute.
             - Insert placeholder keys for Handlebars to replace.
             - If your object doesn't have values you need yet, you can add those properties in the model.
